Added CI pipeline

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/VenketeshRushi/ecom-client/",
-  "name": "client",
+  "name": "ecom-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
