--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "framer-motion": "^10.15.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
