updated vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
+// {
+//     "routes" : [
+//         {
+//             "src":"/[^.]",
+//             "dest":"/"
+//         }
+//     ]
+// }
+
 {
-    "routes" : [
-        {
-            "src":"/[^.]",
-            "dest":"/"
-        }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
 }
