--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/VenketeshRushi/",
+  "homepage": "https://github.com/VenketeshRushi/ecom-client",
   "name": "ecom-client",
   "private": true,
   "version": "0.0.0",
